# Babel

./: .clang-format  .gitignore  CMakeLists.txt  Counter.cpp  Counter.hpp  README.md  conanfile.txt  main.cpp
client/include/: BabelClient.hpp  Commands.hpp  ContactTimer.hpp  IClient.hpp  ServiceLocator.hpp  WindowManager.hpp  exceptions.h
client/include/audio/: Audio.hpp  AudioCompressor.hpp  AudioExtractor.hpp  AudioInputDevice.hpp  AudioManager.hpp  AudioOutputDevice.hpp  AudioPacketSender.hpp  CallManager.hpp  IAudioCompressor.hpp  IAudioDevice.hpp  IAudioExtractor.hpp  Sound.hpp
client/include/commands/: AddContactCommand.hpp  CommandFactory.hpp  CommandManager.hpp  CommandParser.hpp  DisconnectCommand.hpp  GetContactsCommand.hpp  ICommand.hpp  LoginCommand.hpp  RegisterCommand.hpp  StartCallCommand.hpp  StopCallCommand.hpp
client/include/exceptions/: AudioException.hpp  BabelClientException.hpp  BadArgumentsException.hpp  ClientException.hpp  CommandFailedException.hpp  InvalidCredentialsException.hpp  InvalidPasswordException.hpp  InvalidUsernameException.hpp  LoginFailedException.hpp  MissingPasswordException.hpp  MissingUsernameException.hpp  QtTcpClientException.hpp  QtUcpClientException.hpp  SignupFailedException.hpp
client/include/gui/: AboutWindow.hpp  CallWindow.hpp  LoginWindow.hpp  MainWindow.hpp  PersonMainWidget.hpp  SignupWindow.hpp
client/include/network/: ITcpClient.hpp  IUdpClient.hpp  QtTcpClient.hpp  QtUdpClient.hpp
client/src/: BabelClient.cpp  ContactTimer.cpp  WindowManager.cpp  main.cpp
client/src/audio/: AudioCompressor.cpp  AudioExtractor.cpp  AudioInputDevice.cpp  AudioManager.cpp  AudioOutputDevice.cpp  AudioPacketSender.cpp  CallManager.cpp
client/src/commands/: AddContactCommand.cpp  CommandFactory.cpp  CommandManager.cpp  CommandParser.cpp  DisconnectCommand.cpp  GetContactsCommand.cpp  LoginCommand.cpp  RegisterCommand.cpp  StartCallCommand.cpp  StopCallCommand.cpp
client/src/exceptions/: AudioException.cpp  BabelClientException.cpp  BadArgumentsException.cpp  ClientException.cpp  CommandFailedException.cpp  InvalidCredentialsException.cpp  InvalidPasswordException.cpp  InvalidUsernameException.cpp  LoginFailedException.cpp  MissingPasswordException.cpp  MissingUsernameException.cpp  QtTcpClientException.cpp  QtUcpClientException.cpp  SignupFailedException.cpp
client/src/excpetions/: AudioException.cpp
client/src/gui/: AboutWindow.cpp  CallWindow.cpp  LoginWindow.cpp  MainWindow.cpp  PersonMainWidget.cpp  SignupWindow.cpp
client/src/network/: QtTcpClient.cpp  QtUdpClient.cpp
server/include/: AsioTcpClient.hpp  AsioTcpServer.hpp  BabelServer.hpp  IDb.hpp  IServer.hpp  ITcpClient.hpp  IUser.hpp  SqlDb.hpp  User.hpp  UserManager.hpp  Username.hpp  UsersManager.hpp
server/include/commands/: AddContactCommand.hpp  CommandFactory.hpp  CommandParser.hpp  DisconnectCommand.hpp  GetContactsCommand.hpp  ICommand.hpp  LoginCommand.hpp  RegisterCommand.hpp  StartCallCommand.hpp  StopCallCommand.hpp
server/include/database/: DatabaseProvider.hpp  IDb.hpp  SqlDb.hpp
server/include/exceptions/: BabelServerException.hpp  BadArgumentsException.hpp  ConstraintDatabaseException.hpp  CreateTableException.hpp  OpenDatabaseException.hpp  QueryDatabaseException.hpp
server/include/network/: AsioTcpClient.hpp  (+3 more)
server/src/: AsioTcpClient.cpp  AsioTcpServer.cpp  BabelServer.cpp  SqlDb.cpp  User.cpp  UserManager.cpp  UsersManager.cpp  main.cpp
(+18 files in other folders)
